# pwmgr

./: .gitignore  Cargo.toml  LICENSE  README.md
data/: cred_db.json  pwmgr_master_hash
lib/: pwmgrlib.rlib
src/: lib.rs  main.rs  structs.rs
